Another attempted fix for horizontal scroll, this time lessening the initial translate of portfolio descriptions

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -121,4 +121,17 @@
     .portfolio .portfolioDesc {
         padding: 20px;
     }
+
+    .portfolio > div:nth-of-type(2n - 1) {
+        .portfolioDesc {
+            transform: translateX(15%);
+        }
+    }
+
+    .portfolio > div:nth-of-type(2n) {
+        .portfolioDesc {
+            transform: translateX(-15%);
+        }
+    }
+
 }
