--- a/styles/sass/components/_contact.scss
+++ b/styles/sass/components/_contact.scss
@@ -2,6 +2,34 @@
     background-color: $altShadow;
 }
 
+.social {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+    // a {
+    //     display: flex;
+    //     text-decoration: none;
+    //     // align-items: center;
+    // }
+    a {
+        @include shadow($secondaryVariant);
+        text-align: center;
+        min-width: 40px;
+        min-height: 40px;
+        padding-top: 4px;
+        font-size: 2rem;
+        margin: 0 20px;
+        background-color: $secondary;
+        border-radius: 5px;
+        transition: 0.1s;
+        &:hover,
+        &:focus {
+            background: linear-gradient(to bottom right, $gradientOneOpacity, $gradientTwoOpacity);
+            color: $primary;
+        }
+    }
+}
+
 form {
     display: flex;
     flex-wrap: wrap;
